Stared support for method annotations